@@ -1,0 +1,37 @@
+<configuration>
+
+	<components>
+
+		<component id="comp1" 
+			type="Castle.Windsor.Tests.Components.ExtendedComponentWithProperties, Castle.Windsor.Tests"
+			inspectionBehavior="None">
+			<parameters>
+				<Prop1>Name</Prop1>
+				<Prop2>1</Prop2>
+				<Prop3>2</Prop3>
+			</parameters>
+		</component>
+
+		<component id="comp2" 
+			type="Castle.Windsor.Tests.Components.ExtendedComponentWithProperties, Castle.Windsor.Tests"
+			inspectionBehavior="All">
+			<parameters>
+				<Prop1>Name</Prop1>
+				<Prop2>1</Prop2>
+				<Prop3>2</Prop3>
+			</parameters>
+		</component>
+
+		<component id="comp3" 
+			type="Castle.Windsor.Tests.Components.ExtendedComponentWithProperties, Castle.Windsor.Tests"
+			inspectionBehavior="DeclaredOnly">
+			<parameters>
+				<Prop1>Name</Prop1>
+				<Prop2>1</Prop2>
+				<Prop3>2</Prop3>
+			</parameters>
+		</component>
+
+	</components>
+
+</configuration>
